onboarding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-onboarding
  namespace: onboarding  # Specify the namespace here
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: sathish8329/onboarding:1
        ports:
        - containerPort: 3000
        readinessProbe:  # Add readiness probe
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3  # Set failure threshold to 3
---
apiVersion: v1
kind: Service
metadata:
  name: lowcode-frontend-service-onboarding
  namespace: onboarding  # Specify the namespace here
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
