ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lowcode-ingress-kovaion-ai-onboarding
  namespace: onboarding
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "kovaion.ai"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lowcode-frontend-service-onboarding
            port:
              number: 80
